--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <p></p>
 
 
-        <p class="view"><a href="https://github.com/jdong92">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/jdong92">GitHub</a></p>
+		<p class="view"><a href="www.linkedin.com/in/johndong">Linkedin</a></p>
 
       </header>
       <section>
