--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 
         <p class="view"><a href="https://github.com/jdong92">GitHub</a></p>
 	<p class="view"><a href="https://linkedin.com/in/johndong">Linkedin</a></p>
+	<p class="view"><a href="mailto:webmaster@example.com">Email</a></p>
 
       </header>
       <section>
 
 
 
-<p>Hello my name is John Dong. I love working with Python and I have worked at Intel and Elemental Technologies. I am passionate on how big data and agriculture is changing the way we feed the world.</p>
+<p>Welcome to my website and thanks for visiting! I love working with Python and I have worked at Intel and Elemental Technologies. I am passionate on how big data and agriculture is changing the way we feed the world. Currently I am working on a web based decision and economic tool to help growers and farmers make informed decision on their operations.</p>
 
 
 
