--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>John Dong</h1>
         <p></p>
 
-
+ 	<p class="view"><a href="https://agbizlogic.com">AgBiz Logic&#0153</a></p>
         <p class="view"><a href="https://github.com/jdong92">GitHub</a></p>
 	<p class="view"><a href="https://linkedin.com/in/johndong">Linkedin</a></p>
 	<p class="view"><a href="mailto:webmaster@example.com">Email</a></p>
@@ -28,7 +28,7 @@
 
 
 
-<p>Welcome to my website and thanks for visiting! I love working with Python and I have worked at Intel and Elemental Technologies. I am passionate on how big data and agriculture is changing the way we feed the world. Currently I am working on a web based decision and economic tool to help growers and farmers make informed decision on their operations.</p>
+<p>Welcome to my website and thanks for visiting! I love working with Python and I have worked at Intel and Elemental Technologies. I am passionate on how big data and agriculture is changing the way we feed the world. Currently, I am working on a web based decision and economic tool to help growers and farmers make informed decision on their operations.</p>
 
 
 
