Removed https from agbizlogic.com

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>John Dong</h1>
         <p></p>
 
- 	<p class="view"><a href="https://agbizlogic.com">AgBiz Logic&#0153</a></p>
+ 	<p class="view"><a href="agbizlogic.com">AgBiz Logic&#0153</a></p>
         <p class="view"><a href="https://github.com/jdong92">GitHub</a></p>
 	<p class="view"><a href="https://linkedin.com/in/johndong">Linkedin</a></p>
 	<p class="view"><a href="mailto:webmaster@example.com">Email</a></p>
