changed css href link color

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
           <div class="col-md-6">
             <h2 class="heading">About me</h2>
             
-            <p>I am a software engineer from Portland, Oregon. I received my Bachelors of Computer Science from Oregon State University with a concentration in Computer Systems. I have interned at Intel and Elemental Technologies. Recently, I developed and designed a prototype version of an accounting tool targeting farmers called <a href="www.agbizlogic.com">AgBiz Logic</a> for the Oregon State University Applied Economic Department. The website accomplished on attracting around 12 growers from the Oregon and Washington area to sign up. </p>
+            <p>I am a software engineer from Portland, Oregon. I received my Bachelors of Computer Science from Oregon State University with a concentration in Computer Systems. I have interned at Intel and Elemental Technologies. Recently, I developed and designed a prototype version of an accounting tool targeting farmers called <a href="http://www.agbizlogic.com">AgBiz Logic</a> for the Oregon State University Applied Economic Department. The website accomplished on attracting around 12 growers from the Oregon and Washington area to sign up. </p>
             <p>Currently I am contractor at Intel as a Software Engineer where I am working with Source Control Management and Jenkins CI. I am very proactive in finding bottlenecks and ways to further automate manual tasks in my current position. My current roles have me wearing multiple hats, where I improve our Jenkins build systems or supporting our Bluetooth Firmware/Software Engineers with issues they have with our build systems. My current goals is to learn more about DevOps and start using tools like Puppet Lab/Chef at my current work.</p>
 			
 			
 			
-			     <p class="social"><a href="#" title="" class="linkedin"><i class="fa fa-linkedin"></i></a><a href="#" title="" class="github"><i class="fa fa-github"></i><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a><a href="#" title="" class="email"><i class="fa fa-envelope"></i></a></p>
+			     <p class="social"><a href="https://www.linkedin.com/in/johndong" title="" class="linkedin"><i class="fa fa-linkedin"></i></a><a href="https://github.com/jdong92" title="" class="github"><i class="fa fa-github"></i><a href="mailto:jdong1992@gmail.com" title="" class="email"><i class="fa fa-envelope"></i></a></p>
           </div>
           <div class="col-md-5 col-md-offset-1">
             <p><img src="img/profile.png" alt="" class="img-responsive img-circle"></p>
