--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h2 class="heading">About me</h2>
             
             <p>I am a software engineer from Portland, Oregon. I received my Bachelors of Computer Science from Oregon State University with a concentration in Computer Systems. I have interned at Intel and Elemental Technologies. Recently, I developed and designed a prototype version of an accounting tool targeting farmers called <i><a href="http://www.agbizlogic.com">AgBiz Logic</a></i> for the Oregon State University Applied Economic Department. The website accomplished on attracting around 12 growers from the Oregon and Washington area to sign up. </p>
-            <p>Currently I am contractor at Intel as a Software Engineer where I am working with Source Control Management and Jenkins CI. I am very proactive in finding bottlenecks and ways to further automate manual tasks in my current position. My current roles have me wearing multiple hats, where I improve our Jenkins build systems or resolve Bluetooth Firmware/Software Engineers daily issues with thier builds. My current goals is to learn more about DevOps and start using tools like Puppet Lab/Chef at my current work.</p>
+            <p>Currently I am contractor at Intel as a Software Engineer where I am working with Source Control Management and Jenkins CI. I am very proactive in finding bottlenecks and ways to further automate manual tasks in my current position. My current roles have me wearing multiple hats, where I improve our Jenkins build systems or resolve Bluetooth Firmware/Software Engineers daily issues with their builds. My current goals is to gain more experience in the DevOps role and start using Puppet Lab/Chef.</p>
 			
 			
 			
