Updated homepage and profile pic.
Updated about me and pictures.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="col-md-8 col-md-offset-2 col-sm-12">
               <p class="italic">Oh, hello, nice to meet you!</p>
               <h1>John Dong</h1>
-              <p class="italic">Python Developer</p>
+              <p class="italic">Software Engineer at McAfee</p>
             </div>
           </div>
         </div>
@@ -76,9 +76,8 @@
           <div class="col-md-6">
             <h2 class="heading">About me</h2>
             
-            <p>I am a software engineer from Portland, Oregon. I received my Bachelors of Computer Science from Oregon State University with a concentration in Computer Systems. I have interned at Intel and Elemental Technologies. Recently, I developed and designed a prototype version of an accounting tool targeting farmers called <i><a href="http://www.agbizlogic.com">AgBiz Logic</a></i> for the Oregon State University Applied Economic Department. The website accomplished on attracting around 12 growers from the Oregon and Washington area to sign up. </p>
-            <p>Currently I am contractor at Intel as a Software Engineer where I am working with Source Control Management and Jenkins CI. I am very proactive in finding bottlenecks and ways to further automate manual tasks in my current position. My current roles have me wearing multiple hats, where I improve our Jenkins build systems or resolve Bluetooth Firmware/Software Engineers daily issues with their builds. My current goals is to gain more experience in the DevOps role and start using Puppet Lab/Chef.</p>
-			
+            <p>My name is John Dong and I am a Software Development Engineer in Test (SDET) at McAfee. Currently I am residing in Portland, Oregon. I received my Bachelors of Computer Science from Oregon State University with a concentration in Computer Systems in 2014. I have interned at Intel and Elemental Technologies. </p>
+            <p>I have been in the software industry for over 3 years. As previous mentioned, I am working at McAfee, specifically with the Orchestrator Cloud (McAfee ePO) security management tool. My team codes, tests and deploys the McAfee ePO Cloud . My interest are working with micro-service based architecture and continuous integration in hoping to make one click deployment a reality. My position involves writing Selenium, integration test, Rest API test using the Test NG and Maven framework in Java. My role also includes supporting our cloud release which involves maintaining our deployment script, testing and making sure the code pushed for release passes all sanity test and automation tests.</p>
 			
 			
 			     <p class="social"><a href="https://www.linkedin.com/in/johndong" title="" class="linkedin"><i class="fa fa-linkedin"></i></a><a href="https://github.com/jdong92" title="" class="github"><i class="fa fa-github"></i><a href="mailto:jdong1992@gmail.com" title="" class="email"><i class="fa fa-envelope"></i></a></p>
@@ -100,7 +99,7 @@
       <div class="container"> 
         <div class="row copyright">
           <div class="col-md-6">
-            <p>&copy;2016 John Dong</p>
+            <p>&copy;2017 John Dong</p>
           </div>
           <div class="col-md-6">
             <p class="credit">Template by <a href="http://bootstrapious.com/landing-pages">Bootstrapious &mdash; Bootstrap Landing Pages</a></p>
