--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container clearfix">
           <div class="row">
             <div class="col-md-8 col-md-offset-2 col-sm-12">
-              <p class="italic">Oh, hello, nice to meet you!</p>
+              <p class="italic">Hello World!</p>
               <h1>John Dong</h1>
               <p class="italic">Software Engineer at McAfee</p>
             </div>
@@ -77,7 +77,7 @@
             <h2 class="heading">About me</h2>
             
             <p>My name is John Dong and I am a Software Development Engineer in Test (SDET) at McAfee. Currently I am residing in Portland, Oregon. I received my Bachelors of Computer Science from Oregon State University with a concentration in Computer Systems in 2014. I have interned at Intel and Elemental Technologies. </p>
-            <p>I have been in the software industry for over 3 years. As previous mentioned, I am working at McAfee, specifically with the Orchestrator Cloud (McAfee ePO) security management tool. My team codes, tests and deploys the McAfee ePO Cloud . My interest are working with micro-service based architecture and continuous integration in hoping to make one click deployment a reality. My position involves writing Selenium, integration test, Rest API test using the Test NG and Maven framework in Java. My role also includes supporting our cloud release which involves maintaining our deployment script, testing and making sure the code pushed for release passes all sanity test and automation tests.</p>
+            <p>I have been in the software industry for almost 3 years. As previous mentioned, I am working at McAfee, specifically with the Orchestrator Cloud (<a href="https://manage.mcafee.com">McAfee ePO</a>) security management tool. My team codes, tests and deploys McAfee ePO Cloud. My interest are working with micro-service based architecture and continuous integration in hoping to make one click deployment a reality. My position involves writing Selenium, integration test, Rest API test using the Test NG framework and Maven in Java. My role also includes leading our cloud platform release which involves writing deployment scripts in PowerShell, testing and making sure the code pushed for release passes all quality check-lists.</p>
 			
 			
 			     <p class="social"><a href="https://www.linkedin.com/in/johndong" title="" class="linkedin"><i class="fa fa-linkedin"></i></a><a href="https://github.com/jdong92" title="" class="github"><i class="fa fa-github"></i><a href="mailto:jdong1992@gmail.com" title="" class="email"><i class="fa fa-envelope"></i></a></p>
